
- stationaryGroundwater2DFoam

  - seepage function is available (generates seepageTerm field)
  - potentialMNT field is modified if < z0

### Libraries

- porousBoundaryConditions

  - event fixed flow rate now use a given field in transportProperties
    "eventFilePatchMassFlowRate" to allow the solvers to track BC changes and
    adapt timestep

- porousModels

  - alphaDispersion model fixed

- toolsGIS

  - event files generalized to all solvers
  - value at given time is interpolated using given event values
  - event values before first event time and after last event time is equal to 0
  - keyword event differenciation : 
    - source event for injection/extraction terms in the domains
    - patch event for tracer injection (porousScalarTransportFoam)
    - infiltration event for uniform infiltration (groundwater2DFoam)
    - output event to specify write times

************************
*** V1901
*** Hydrology module release
************************

### Wiki

- A wiki has been initialised for some solvers and utilities on github

  https://github.com/phorgue/porousMultiphaseFoam/wiki

### Solvers

- groundwater2DFoam

  - water bilan added (with stationary option to stop run)
  - dhmax is relative to the max of hwater field
  - potentialEqn is solved instead of hwater equation (identical to stationary)

- porousScalarTransportFoam

  - mass balance added for C tracer for each non-wall patch and injection
  wellbores. Results are displayed in terminal and CSV file (see tutorials)

- porousScalarTransport2DFoam

  - passive scalar transport for pre-calulated 2D flux field with
  groundwater2DFoam

- stationaryGroundwater2DFoam

  - "stationary" version of groundwater2DFoam
  - fixedPotentialList added in transportProperties (optional)
  - forcing potential mode is added with two possible modes :
    - fixedValue : use values given in fixedPotentialList
    - fixedMNT : use bilinear interpolated value using fileMNT given 

- stationaryGroundwaterFoam
