@@ -36,6 +36,7 @@ Developers
 #include "incompressiblePhase.H"
 #include "sourceEventFile.H"
 #include "outputEventFile.H"
+#include "patchEventFile.H"
 
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
